feat: add logic for displaying pictures

--- a/src/components/cards/PreviewCard/PreviewCard.style.css
+++ b/src/components/cards/PreviewCard/PreviewCard.style.css
@@ -1,20 +1,42 @@
 .preview-card {
+	display: flex;
+	flex-direction: column;
 	padding: 20px 30px;
 	border: 1px solid #ccc;
 	border-radius: 10px;
-	display: flex;
 	justify-content: center;
 	max-width: 250px;
+	height: 400px;
 	width: 100%;
+	transition:
+		border 0.5s,
+		transform 0.5s;
 }
 
 .preview-card:hover {
 	border: 1px solid #646363;
 	cursor: pointer;
-	transition: 0.3s;
+	transform: scale(1.01);
+}
+
+.preview-card__image-container {
+	width: 100%;
+	height: 100%;
+	flex: 1;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .preview-card__image {
-	width: 200px;
-	height: 250px;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.preview-card__info {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 }
