--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,22 @@
 	justify-content: center;
 	align-items: center;
 }
+
+.logo-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+}
+
+.logo {
+	width: 40px;
+	height: 50px;
+}
+
+.preview-cards-container {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 20px;
+}
