--- a/src/components/forms/SearchInput/SearchInput.style.css
+++ b/src/components/forms/SearchInput/SearchInput.style.css
@@ -10,20 +10,20 @@
 	padding: 8px;
 	font-size: 16px;
 	border: 1px solid #ccc;
-	border-radius: 4px;
+	border-radius: 10px;
 	flex: 1;
 }
 
 .search-input__button {
 	padding: 8px 16px;
 	font-size: 16px;
-	background-color: #007bff;
+	background-color: #7b6161;
 	color: white;
 	border: none;
-	border-radius: 4px;
+	border-radius: 10px;
 	cursor: pointer;
 }
 
 .search-input__button:hover {
-	background-color: #0056b3;
+	background-color: #514040;
 }
