--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,13 @@
 	gap: 10px;
 }
 
+.search-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+}
+
 .logo {
 	width: 40px;
 	height: 50px;
