--- a/src/pages/reserve/ReservePage.style.css
+++ b/src/pages/reserve/ReservePage.style.css
@@ -1,8 +1,4 @@
-body {
-	background: #222222;
-}
-
-div {
+section div {
 	display: block;
 	position: absolute;
 	margin: auto;
@@ -186,7 +182,7 @@ div {
 .signature {
 	position: absolute;
 	margin: auto;
-	bottom: 0;
+	bottom: 50px;
 	top: auto;
 }
 
@@ -194,43 +190,5 @@ div {
 	text-align: center;
 	font-family: Helvetica, Arial, Sans-Serif;
 	font-size: 0.85em;
-	color: #dddddd;
-}
-
-.signature .much-heart {
-	display: inline-block;
-	position: relative;
-	margin: 0 4px;
-	height: 10px;
-	width: 10px;
-	background: #ac1d3f;
-	border-radius: 4px;
-	-ms-transform: rotate(45deg);
-	-webkit-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
-
-.signature .much-heart::before,
-.signature .much-heart::after {
-	display: block;
-	content: "";
-	position: absolute;
-	margin: auto;
-	height: 10px;
-	width: 10px;
-	border-radius: 5px;
-	background: #ac1d3f;
-	top: -4px;
-}
-
-.signature .much-heart::after {
-	bottom: 0;
-	top: auto;
-	left: -4px;
-}
-
-.signature a {
-	color: #fff;
-	text-decoration: none;
-	font-weight: bold;
+	color: #0e0e0e;
 }
