--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .app {
 	display: flex;
 	flex-direction: column;
-	gap: 40px;
+	gap: 60px;
+	padding-bottom: 30px;
 	width: 100%;
 	height: 100%;
 	justify-content: center;
