--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -24,4 +24,14 @@
 	p {
 		margin: 0;
 	}
+
+	@keyframes spin {
+		from {
+			transform: rotate(0deg);
+		}
+
+		to {
+			transform: rotate(360deg);
+		}
+	}
 }
