--- a/src/pages/home/HomePage.module.scss
+++ b/src/pages/home/HomePage.module.scss
@@ -1,12 +1,12 @@
 .app {
 	display: flex;
-	flex-direction: column;
 	gap: 35px;
 	padding: 10px 0px;
 	width: 100%;
 	height: 100%;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 
 	.searchContainer {
 		display: flex;
@@ -15,41 +15,40 @@
 		gap: 10px;
 	}
 
-	.logo {
-		width: 50px;
-		height: 50px;
-		animation: spin 8s linear infinite;
-	}
-
-	.logoText {
+	.leftSection {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		align-items: start;
-
-		h1 {
-			margin: 0;
-		}
-
-		p {
-			margin: 0;
-		}
+		align-items: center;
+		gap: 10px;
 	}
+}
 
-	.previewCardsContainer {
-		display: flex;
-		justify-content: center;
-		flex-wrap: wrap;
-		gap: 20px;
-	}
+.previewCardsContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 20px;
+}
 
-	@keyframes spin {
-		from {
-			transform: rotate(0deg);
-		}
+.detailsSection {
+	display: block;
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 30%;
+	height: 100%;
+	background-color: white;
+	box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+	overflow-y: auto;
+	padding: 1rem;
+}
 
-		to {
-			transform: rotate(360deg);
-		}
-	}
+.searchContainer {
+	margin: 1rem 0;
+}
+
+.isDetailsOpen {
+	width: 70%;
 }
